--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -276,3 +276,12 @@
     transform: rotate(0deg);
   }
 }
+
+@keyframes slide {
+  from {
+    transform: translateY(100%);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
